[gd_scene load_steps=3 format=3 uid="uid://dsdwswrn5bmj0"]

[ext_resource type="StyleBox" uid="uid://do1ur407evtr1" path="res://Styles/DialogueStyles/DialogueGraphUIStyle.tres" id="1_7m46q"]
[ext_resource type="Script" path="res://addons/dialogueplugin/DialogueEditorUtilities.gd" id="1_gpr5q"]

[node name="DialogueEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gpr5q")
my_button_path = NodePath("Panel/SingleNode")

[node name="GraphEdit" type="GraphEdit" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.093
anchor_right = 0.996
anchor_bottom = 1.0
offset_top = -0.264
offset_right = 4.60803
offset_bottom = 1.0
scroll_offset = Vector2(-2.60791, -1.264)

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.266
anchor_top = 0.014
anchor_right = 0.982
anchor_bottom = 0.016
offset_left = 0.100037
offset_top = 5.998
offset_right = 0.268066
offset_bottom = 38.561
theme_override_styles/panel = ExtResource("1_7m46q")

[node name="SingleNode" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.006
anchor_right = 0.129
anchor_bottom = 0.945
offset_left = 0.0589414
offset_top = 1.0
offset_right = -0.240128
offset_bottom = 0.00892067
text = "SingleNode"

[node name="MultipleChoiceNode" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.14
anchor_right = 0.34
anchor_bottom = 0.945
offset_left = 54.701
offset_top = 1.0
offset_right = 54.7009
offset_bottom = 0.00892067
text = "MultipleChoiceNode"

[node name="SaveButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.35
anchor_right = 0.43
anchor_bottom = 0.945
offset_left = 94.7509
offset_top = 1.0
offset_right = 94.8659
offset_bottom = 0.00892067
text = "Save"

[node name="LoadButton" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.441
anchor_top = 0.03
anchor_right = 0.533
anchor_bottom = 0.945
offset_left = 94.8069
offset_top = -0.0155907
offset_right = 95.0379
offset_bottom = 0.00889015
text = "Load"

[connection signal="pressed" from="Panel/SingleNode" to="." method="_on_single_node_pressed"]
